--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -5,8 +5,11 @@
 </head>">
 </body>
     <h1>Newbie</h1>
-    img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Flookaside.fbsbx.com%2Flookaside%2Fcrawler%2Fmedia%2F%3Fmedia_id%3D531809613620116&imgrefurl=https%3A%2F%2Fwww.facebook.com%2FDisneyBaymax%2F&tbnid=hHUs_6j6hxOGYM&vet=12ahUKEwjl7PGY7MroAhV6AjQIHelKC9cQMygIegUIARDsAg..i&docid=9IMZrRc9hCt_OM&w=720&h=720&q=baymax&ved=2ahUKEwjl7PGY7MroAhV6AjQIHelKC9cQMygIegUIARDsAg"     
-    <audio controls> 
+    <img src="img_girl.jpg" alt="Girl in a jacket">    
+    <audio controls>
+        <source src="horse.ogg" type="audio/ogg">
         <source src="horse.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+      </audio>
 </body>
 </html>
