--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Embedded Media</title>
-</head>">
+</head>
 </body>
     <h1>Newbie</h1>
     <img src="img_girl.jpg" alt="Girl in a jacket">    
