--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -5,7 +5,7 @@
 </head>
 </body>
     <h1>Newbie</h1>
-    <img src="img_girl.jpg" alt="Girl in a jacket">    
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRO1cmQ2z4vN-jsRlXbZrFYql5t5tJWxZVnboI5OMvdDg8Q0NGq&usqp=CAU" alt="NIKE">    
     <audio controls>
         <source src="horse.ogg" type="audio/ogg">
         <source src="horse.mp3" type="audio/mpeg">
