--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -31,5 +31,8 @@
 Video courtesy of 
 <a href="https://www.bigbuckbunny.org/" target="_blank">Big Buck Bunny</a>.
 </p>
+
+<object width="400" height="400" data="helloworld.swf"></object>
+
 </body>
 </html>
