--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -22,14 +22,11 @@
      <iframe width="560" height="315" src="https://www.youtube.com/embed/WUHjBWmVRb0?start=180" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <video width="400" controls>
-  <source src="mov_bbb.mp4" type="video/mp4">
-  <source src="mov_bbb.ogg" type="video/ogg">
+  <video width="400" controls>
+  <source src="Kobe Forever.mp4" type="video/mp4">
+  
   Your browser does not support HTML5 video.
 </video>
-
-<p>
-Video courtesy of 
-<a href="https://www.bigbuckbunny.org/" target="_blank">Big Buck Bunny</a>.
 </p>
 
 <object width="400" height="400" data="helloworld.swf"></object>
