--- a/tags.html
+++ b/tags.html
@@ -7,7 +7,7 @@
     <h1>Victor Huynh</h1>
     <h2>About Me</h2>
     <p>I was born in the Renton, Washington. <p>
-    <p>My favorite hobbies are playing basketball and playing video games <p>
+    <p>My favorite hobbies are playing basketball and playing video games. <p>
     <h2>My Favorite Sites </h2>
     <ul>
         <li>
