--- a/tags.html
+++ b/tags.html
@@ -3,11 +3,16 @@
 <head>
   <title>Victor's Awesome Website</title>
 </head>
+  <meta charset="UTF-8">
 <body>
     <h1>Victor Huynh</h1>
     <h2>About Me</h2>
     <p>I was born in the Renton, Washington. <p>
     <p>My favorite hobbies are playing basketball and playing video games. <p>
+  
+  <p>I will display A B C</p>
+<p>I will display &#65; &#66; &#67;</p>
+  
     <h2>My Favorite Sites </h2>
     <ul>
         <li>
