--- a/tags.html
+++ b/tags.html
@@ -16,7 +16,8 @@
     <div class="cities">
     <h1>Victor Huynh</h1> 
   </div>
-  <p>&#128512;#128507;#128508;#128509;#128510;#128511;#128513;#128514;#128515;#128516;#128517;</p>
+  <p><p style="font-size:48px">
+&#128512; &#128516; &#128525; &#128151;</p>
     <div class="cities">
     <h2>About Me</h2>
     <p>I was born in the Renton, Washington. <p>
