--- a/tags.html
+++ b/tags.html
@@ -16,7 +16,7 @@
     <div class="cities">
     <h1>Victor Huynh</h1> 
   </div>
-  <p><p style="font-size:48px">
+  <p style="font-size:48px">
 &#128512; &#128516; &#128525; &#128151;</p>
     <div class="cities">
     <h2>About Me</h2>
