--- a/someCss.html
+++ b/someCss.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <style>
 p.a {
   font: 15px Arial, sans-serif;
 }
@@ -24,3 +29,4 @@ p.b {
 <img src="wolf.jfif" style= "height:50px; width:50px"/>
 </body>
 </html>
+
