--- a/index.html
+++ b/index.html
@@ -1,9 +1,44 @@
 <!DOCTYPE html>
-<html>
-    <head> 
-        <title>Hello World</title>
-    </head>
-    <body>
-        <h1>Hello World</h1>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div id = "Header">
+        <h1> Keith the QB </h1>
+    </div>
+
+<div id = "LeftNav">
+    <h3 class = "titles"> My Favorite Websites </h3>
+    <ul>
+        <li><a href="https://www.theverge.com/">The Verge</a></li>
+        <li><a href="http://www.washington.edu/">UW</a></li>
+        <li><a href="https://www.nike.com/">NIKE</a></li>
+        <li><a href="https://www.amazon.com/">Amazon</a></li>
+        <li><a href="https://gohuskies.com/">UW Athletics</a></li>
+    </ul>
+    <img src="icon.gif" width=350px" height="200px">
+   </div>
+
+<div id="Content">
+    <p> This is Keith Price's number one Fan Site! He is a good leader, wins games, throws awesome passes, and he also plays for The University of Washington Huskies! The Huskies have been on point this season with a starting record of 4-0.
+    br /> <span id="bow">Bow Down to Washington!!</span></p>
+    <img src="price.jpg>
+    >/div>
+
+>div id="Footer">
+    <h3 class = "titles">Connect with Me Online: </h3>
+    <ul>
+        <li><a href="https://www.facebook.com/">Facebook</a></li>
+        <li><a href="https://www.instagram.com/">Instagram</a></li>
+        <li><a href="https://twitter.com/home?lang=en">Twitter</a></li>
+    </ul>
+    <p>Copyright of Keith the QB</p>
+</div>
+
+    
+</body>
 </html>
+
