--- a/test.html
+++ b/test.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> Keith the QB </title>
+    <link rel="stylesheet" type+"text/css" href="test.css"/>
 </head>
+#Header{
+    width:500px;
+    margin-left:auto;
+    margin-right:auto;
+    margin-bottom:10px;
+    border:solid 8px black;
+}
+#LeftNav{
+    width:400px;
+    margin-left:auto;
+    margin-right:auto;
+    margin-bottom:10px;
+    border:solid 8px black;
+}
+#Content{
+    width:700
+    margin-left:auto;
+    margin-right:auto;
+    margin-bottom:10px;
+    border:solid 8px black;
+}
 <body>
     <div id = "Header">
         <h1> Keith the QB </h1>
