--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title> Keith the QB </title>
-    <link rel="stylesheet" type+"text/css" href="test.css"/>
+    <link rel="stylesheet" type="text/css" href="test.css"/>
 </head>
 #Header{
     width:500px;
@@ -39,7 +39,7 @@
         <li><a href="https://www.amazon.com/">Amazon</a></li>
         <li><a href="https://gohuskies.com/">UW Athletics</a></li>
     </ul>
-    <img src="icon.gif" width=350px" height="200px">
+    <img src="icon.gif" width=350px height="200px">
    </div>
 
 <div id="Content">
