--- a/someCss.html
+++ b/someCss.html
@@ -20,9 +20,9 @@ p.b {
 
 <h1>The font Property</h1>
 
-<p class="a">This is a paragraph. The font size is set to 15 pixels, and the font family is Arial.</p>
+<p class="a"> t had been her dream for years but Dana had failed to take any action toward making it come true. There had always been a good excuse to delay or prioritize another project. As she woke, she realized she was once again at a crossroads. Would it be another excuse or would she finally find the courage to pursue her dream? Dana rose and took her first step.</p>
 
-<p class="b">This is a paragraph. The font is set to italic and bold, with small-caps (all lowercase letters are converted to uppercase). The font size is set to 12 pixels, the line height is set to 30 pixels, and the font family is Georgia.</p>
+<p class="b">She had come to the conclusion that you could tell a lot about a person by their ears. The way they stuck out and the size of the earlobes could give you wonderful insights into the person. Of course, she couldn't scientifically prove any of this, but that didn't matter to her. Before anything else, she would size up the ears of the person she was talking to. The font size is set to 12 pixels, the line height is set to 30 pixels, and the font family is Georgia.</p>
 
 
 <img src="lion.jfif" style= "height:50px; width:50px"/>
