--- a/someCss.html
+++ b/someCss.html
@@ -18,7 +18,8 @@ p.b {
 </head>
 <body>
 
-<h1>The font Property</h1>
+<h1>Some CSSy</h1>
+   <span style='font-size:100px;'>&#129409;</span>
 
 <p class="a"> It had been her dream for years but Dana had failed to take any action toward making it come true. There had always been a good excuse to delay or prioritize another project. As she woke, she realized she was once again at a crossroads. Would it be another excuse or would she finally find the courage to pursue her dream? Dana rose and took her first step.</p>
 
